{
  "version": 4,
  "terraform_version": "1.1.6",
  "serial": 19,
  "lineage": "d10a5e09-45cd-a6a3-3bfc-32bb023deaaa",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "k8s_projects",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:958923515642:internet-gateway/igw-0e793454aa50ea990",
            "id": "igw-0e793454aa50ea990",
            "owner_id": "958923515642",
            "tags": {
              "Name": "terraform-eks-project"
            },
            "tags_all": {
              "Name": "terraform-eks-project"
            },
            "vpc_id": "vpc-01f0714c5341b7730"
          },
          "dependencies": [
            "aws_vpc.k8s_projects"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "k8s_projects",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:958923515642:route-table/rtb-053e778570f1b4d6d",
            "id": "rtb-053e778570f1b4d6d",
            "owner_id": "958923515642",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0e793454aa50ea990",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-01f0714c5341b7730"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.k8s_projects",
            "aws_vpc.k8s_projects"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "k8s_projects",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-084326fac9748971a",
            "route_table_id": "rtb-053e778570f1b4d6d",
            "subnet_id": "subnet-0eccc58e4d399ef74"
          },
          "dependencies": [
            "aws_internet_gateway.k8s_projects",
            "aws_route_table.k8s_projects",
            "aws_subnet.k8s_projects",
            "aws_vpc.k8s_projects",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0e167ecfb5e5e32ee",
            "route_table_id": "rtb-053e778570f1b4d6d",
            "subnet_id": "subnet-08900623b1d03fec8"
          },
          "dependencies": [
            "aws_internet_gateway.k8s_projects",
            "aws_route_table.k8s_projects",
            "aws_subnet.k8s_projects",
            "aws_vpc.k8s_projects",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "k8s_projects-cluster",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:958923515642:security-group/sg-083d52957f54ef6c0",
            "description": "Cluster communication with worker nodes",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-083d52957f54ef6c0",
            "ingress": [],
            "name": "terraform-eks-projects-cluster",
            "name_prefix": "",
            "owner_id": "958923515642",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "terraform-eks-k8s_projects"
            },
            "tags_all": {
              "Name": "terraform-eks-k8s_projects"
            },
            "timeouts": null,
            "vpc_id": "vpc-01f0714c5341b7730"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.k8s_projects"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "k8s_projects-cluster-ingress-workstation-https",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "69.255.168.221/32"
            ],
            "description": "Allow workstation to communicate with the cluster API Server",
            "from_port": 443,
            "id": "sgrule-1889449854",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-083d52957f54ef6c0",
            "self": false,
            "source_security_group_id": null,
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.k8s_projects-cluster",
            "aws_vpc.k8s_projects",
            "data.http.workstation-external-ip"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "k8s_projects",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:958923515642:subnet/subnet-0eccc58e4d399ef74",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.0.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0eccc58e4d399ef74",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "958923515642",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "terraform-eks-project-node",
              "kubernetes.io/cluster/terraform-eks-project": "shared"
            },
            "tags_all": {
              "Name": "terraform-eks-project-node",
              "kubernetes.io/cluster/terraform-eks-project": "shared"
            },
            "vpc_id": "vpc-01f0714c5341b7730"
          },
          "dependencies": [
            "aws_vpc.k8s_projects",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:958923515642:subnet/subnet-08900623b1d03fec8",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-08900623b1d03fec8",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "958923515642",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "terraform-eks-project-node",
              "kubernetes.io/cluster/terraform-eks-project": "shared"
            },
            "tags_all": {
              "Name": "terraform-eks-project-node",
              "kubernetes.io/cluster/terraform-eks-project": "shared"
            },
            "vpc_id": "vpc-01f0714c5341b7730"
          },
          "dependencies": [
            "aws_vpc.k8s_projects",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "k8s_projects",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:958923515642:vpc/vpc-01f0714c5341b7730",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-04a434bd2df439ecf",
            "default_route_table_id": "rtb-0fa1d0e3542ecb8a0",
            "default_security_group_id": "sg-0d3f97fe1670f65db",
            "dhcp_options_id": "dopt-c8de95b3",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-01f0714c5341b7730",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0fa1d0e3542ecb8a0",
            "owner_id": "958923515642",
            "tags": {
              "Name": "terraform-eks-project-node",
              "kubernetes.io/cluster/terraform-eks-project": "shared"
            },
            "tags_all": {
              "Name": "terraform-eks-project-node",
              "kubernetes.io/cluster/terraform-eks-project": "shared"
            }
          }
        }
      ]
    }
  ]
}